--- a/src/CSS/index.css
+++ b/src/CSS/index.css
@@ -3,3 +3,10 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.codeEditor{
+  max-height: 500px;
+  max-width: 500px;
+  border-width: 1px;
+  border-color: black;
+}
