--- a/src/CSS/index.css
+++ b/src/CSS/index.css
@@ -21,3 +21,11 @@ body {
 .editorContainer {
   display: flex;
 }
+
+.chatbox {
+  display: flex;
+  overflow-y: auto;
+  border: 1px solid #778899;
+  max-width: 100%;
+  height: 500px;
+}
