--- a/src/CSS/index.css
+++ b/src/CSS/index.css
@@ -28,4 +28,14 @@ body {
   border: 1px solid #778899;
   max-width: 100%;
   height: 500px;
+  flex-direction: column-reverse;
+}
+
+.messageBox {
+  height: 50px;
+  width: calc(100% - 80px);
+}
+
+.flexContainer {
+  display: flex;
 }
